<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/auto_backup">
    	<CheckBoxPreference
        	android:key="auto_backup"
        	android:title="@string/auto_backup"
        	android:defaultValue="true" />
    	<ListPreference
        	android:dependency="auto_backup"
        	android:key="auto_backup_interval"
        	android:title="@string/auto_backup_interval"
        	android:entries="@array/auto_backup_time"
        	android:entryValues="@array/auto_backup_time_values"
        	android:defaultValue="@string/auto_backup_time_default" />
    	<CheckBoxPreference
        	android:dependency="auto_backup"
        	android:key="backup_wifi"
        	android:title="@string/backup_wifi"
        	android:defaultValue="true" />
    	</PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings">
     	<Preference            
            android:key="clear_history"
            android:title="@string/clear_history" />
    </PreferenceCategory>
</PreferenceScreen>