<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.testing.MainActivity$RestoreFragment" >

     <Button
         android:id="@+id/restore_calls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/restore_calls" />

     <Button
         android:id="@+id/restore_photos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/restore_calls"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="@string/restore_photos" />

     <Button
         android:id="@+id/restore_contacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/restore_photos"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="@string/restore_contacts" />

     <Button
         android:id="@+id/restore_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/restore_calls"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/restore_all" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Here you can restore your data from the remote server." />

</RelativeLayout>
